@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0


class ReviewController {
    +findAllReviews(string sku): Product
}

class ReviewService {
    +findAllReviews(string sku): Product
}

interface ReviewRepository <<interface>>{
    +findAll(string sku): List<Review>

}

interface ProductRepository <<interface>>{
    +findBySkuProduct(string sku): Product
   }

class Review {
    - idReview
    - status
    - text
    - rating
    - Date
}

class Product {
    - name
    - description
    - SKU
    - barCode
}

ReviewController ..> ReviewService: uses
ReviewService ..> ReviewRepository: uses
ReviewService ..> ProductRepository: uses
ReviewRepository "1" --> "0..*" Review:  records
ProductRepository "1" --> "0..*" Product:  records

@enduml